#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pytopsana
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-03
2015-05-07 Mikhail S. Dubrovin
- Add implementation of NDArrProducer* for all major detectors with examples in examples/ex_* (PSAS-139)
	
Tag: V00-00-02
2015-05-01 Mikhail S. Dubrovin
- Add NDArrProducer* factory classes with implementation for CSPAD in NDArrProducerCSPAD (PSAS-139)
	
Tag: V00-00-01
2015-04-07 Mikhail S. Dubrovin
- Class Detector, its wrapper pyDetector and example are ready 
	to get all intensity calibration constants - 
	pedestals, pixel_rms, pixel_gain, pixel_mask, pixel_bkgd, pixel_status, common_mode
	
2015-03-31 Mikhail S. Dubrovin
- just created this template file, this entry is an example of the change log
  entry
- keep it brief and easy to read
- always include author name and date of the change, provide CVS tag when 
  appropriate
